--- a/content/resources/4-195s05.md
+++ b/content/resources/4-195s05.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: A digital rendering of Herzog and de Meuron's Stone House. (Image courtesy
   of Stephen Perdue.)
-file: https://ol-ocw-studio-app-qa.s3.amazonaws.com/courses/4-195-special-problems-in-architectural-design-spring-2005/b2f466b270f328d10f359e8fb2a0661b_4-195s05.jpg
+file: /media/courses/4-195-special-problems-in-architectural-design-spring-2005/b2f466b270f328d10f359e8fb2a0661b_4-195s05.jpg
 file_type: image/jpeg
 image_metadata:
   caption: A digital rendering of Herzog and de Meuron's Stone House. (Image courtesy
@@ -10,8 +10,10 @@ image_metadata:
   credit: ''
   image-alt: A digital rendering of a stone house.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Stone House
 uid: b2f466b2-70f3-28d1-0f35-9e8fb2a0661b
 ---
+A digital rendering of Herzog and de Meuron's Stone House. (Image courtesy of Stephen Perdue.)
